public class Battalion {
    public static void main(String[] args) {
        // TODO Auto-generated method stub
        System.out.println("Welcome to the battle of the lord");
        Turn fight = new Turn();
        fight.initBattalion();
    }
}
